Changed the way Images are linked.

--- a/01_Jupyter_notebooks.ipynb
+++ b/01_Jupyter_notebooks.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jupyter notebooks\n",
-    "\n",
+    "# Jupyter notebooks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## From Anaconda\n",
     "There is an option called Jupyter. Start that.\n",
     "\n",
@@ -14,14 +19,18 @@
     "Then start the jupyter notebook server by typing\n",
     "```sh\n",
     "jupyter notebook\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The notebook UI\n",
     "The default web browser will open and load the Dashboard. In the below image, two notebooks already existed in the directory where we started.\n",
     "\n",
     "\n",
-    "\n",
-    "![Dashboard](images/dashboard.png)\n",
+    "<a name=\"dashboard\"></a><img src=\"images/dashboard.png\" alt=\"Notebook Dashboard\" style=\"width:600px;\" />\n",
     "\n",
     "\n",
     "\n",
@@ -29,8 +38,7 @@
     "On the top of the page/notebook you will see the Toolbar. From here you can control and execute either cell-by-cell or the whole notebook from top to bottom.\n",
     "\n",
     "\n",
-    "\n",
-    "![Notebook_toolbar](images/notebook_toolbar.png)\n",
+    "<a name=\"notebook_toolbar\"></a><img src=\"images/notebook_toolbar.png\" alt=\"Notebook Toolbar\" style=\"width:600px;\" />\n",
     "\n",
     "\n",
     "To evaluate a cell you can either press __*Run*__ on the toolbar, or press __*Shift+Enter*__ wich will evaluate the current cell and jump to the next one.\n",
