Added another keyboard shortcut in description

--- a/01_Jupyter_notebooks.ipynb
+++ b/01_Jupyter_notebooks.ipynb
@@ -41,7 +41,7 @@
     "<a name=\"notebook_toolbar\"></a><img src=\"images/notebook_toolbar.png\" alt=\"Notebook Toolbar\" style=\"width:600px;\" />\n",
     "\n",
     "\n",
-    "To evaluate a cell you can either press __*Run*__ on the toolbar, or press __*Shift+Enter*__ wich will evaluate the current cell and jump to the next one.\n",
+    "To evaluate a cell you can either press __*Run*__ on the toolbar, or press __*Shift+Enter*__ wich will evaluate the current cell and jump to the next one. __*Ctrl+Enter*__ runs the current cell and keeps it in focus.\n",
     "\n",
     "If the you always want a fresh start, there is some options under the \"Kernel\"-menu."
    ]
