Updated 02_ with some more details.

--- a/02_Python_basics.ipynb
+++ b/02_Python_basics.ipynb
@@ -5,7 +5,19 @@
    "metadata": {},
    "source": [
     "# Python basics\n",
-    "In this notebook we will cover the basics of Python 3 syntax and basic operations.\n",
+    "In this notebook we will cover the basics of Python 3 syntax and basic operations. Everything in this notebook, and the following, is heavily inspired by the official [Python tutorial](https://docs.python.org/3/tutorial).\n",
+    "\n",
+    "- Intro\n",
+    "- Numbers\n",
+    "- Reserved keywords\n",
+    "- Syntax/Indentation/Whitespace\n",
+    "\n",
+    "## Intro\n",
+    "If you are using macOS/Linux, you can just type `python3` to start a Python interpreter. The result in this notebook is the same as in the interpreter.\n",
+    "\n",
+    "Python files use the file ending .py. To run a file just type `python3 file.py`.\n",
+    "\n",
+    "There is also a short section on the keywords reserved by Python, i.e., words you can not use as variable names.\n",
     "\n",
     "Comments in Python start with the hash character, #. "
    ]
@@ -26,6 +38,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "It is easy to use Python as a basic calculator. Working with numbers will be covered below."
    ]
   },
@@ -33,18 +52,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "1 + 1"
    ]
@@ -53,18 +61,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "2 * 2  # Returns an Int"
    ]
@@ -73,18 +70,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(2 * 2)"
    ]
@@ -277,6 +263,91 @@
    ],
    "source": [
     "c  # An undefined variable will raise an error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reserved keywords\n",
+    "```\n",
+    "False      await      else       import     pass\n",
+    "None       break      except     in         raise\n",
+    "True       class      finally    is         return\n",
+    "and        continue   for        lambda     try\n",
+    "as         def        from       nonlocal   while\n",
+    "assert     del        global     not        with\n",
+    "async      elif       if         or         yield\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Syntax/Indentation/Whitespace\n",
+    "Python is very strict when it comes to indentation and white space.\n",
+    "\n",
+    "To start this section I would like to give you the tips to always use 4 spaces. If you use the Tab-key, most editors and IDE have an option to convert the Tab-character ('\\t') into a set number of spaces."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-15-8311423efe5f>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-8311423efe5f>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    b = 2\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This will not work since they are at the same 'level' in the code, but not indented the same way\n",
+    "a = 1\n",
+    " b = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-16-4bf1a7a0d280>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-4bf1a7a0d280>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(a)\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This will no work either\n",
+    "if a == 1:\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# But this will\n",
+    "if a == 1:\n",
+    "    print(a)"
    ]
   },
   {
