--- a/10_numpy_scipy.ipynb
+++ b/10_numpy_scipy.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +136,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.+0.j 2.+0.j 3.+0.j 4.+0.j]\n",
+      "[[1. 2. 3.]\n",
+      " [4. 5. 6.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To create arrays\n",
+    "a_array = np.array([1, 2, 3, 4], dtype=complex)\n",
+    "\n",
+    "print(a_array)\n",
+    "\n",
+    "# Matrix-like array with numpy\n",
+    "mtr_array = np.array([[1,2,3], [4,5,6]], dtype=float)\n",
+    "print(mtr_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -158,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
