--- a/02_Python_basics.ipynb
+++ b/02_Python_basics.ipynb
@@ -52,7 +52,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "1 + 1"
    ]
@@ -61,7 +72,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "2 * 2  # Returns an Int"
    ]
@@ -70,7 +92,18 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(2 * 2)"
    ]
@@ -348,6 +381,157 @@
     "# But this will\n",
     "if a == 1:\n",
     "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operators\n",
+    "```python\n",
+    "Arithmetic: +       -       *       **      /       //      %\n",
+    "Bitwise:    <<      >>      &       |       ^       ~\n",
+    "Comparison: <       >       <=      >=      ==      !=\n",
+    "Logical:    and     not     or\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b10'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# + - * ** / // %         have been covered above. Working on numbers.\n",
+    "# << >> & | ^ ~           are bitwise operators, and very useful working with communication and information theory.\n",
+    "\n",
+    "bin(2)  # Binary representation of the decimal 2 = 10. The '0b' infront tells us that it it binary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b1'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(2 >> 1)   # Shift the bits ONE step to the right. 0b10 -> 0b01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b100'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(2 << 1)   # Shift the bits ONE step to the left. 0b10 -> 0b100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b0'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Bitwise AND\n",
+    "# 6 = 0b110         110\n",
+    "# 1 = 0b001        &001\n",
+    "#                 -----\n",
+    "#                  =000\n",
+    "bin(6 & 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b111'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Bitwise OR\n",
+    "# 6 = 0b110         110\n",
+    "# 1 = 0b001        |001\n",
+    "#                 -----\n",
+    "#                  =111\n",
+    "bin(6 | 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b101'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Bitwise XOR\n",
+    "# 6 = 0b110         110\n",
+    "# 3 = 0b011        ^011\n",
+    "#                 -----\n",
+    "#                  =101\n",
+    "bin(6 ^ 3)"
    ]
   },
   {
