Some typical operations on arrays.

--- a/10_numpy_scipy.ipynb
+++ b/10_numpy_scipy.ipynb
@@ -11,7 +11,7 @@
     "For Matlab users, and for new NumPy/SciPy users there exists plenty of cheat sheets. One from [SciPy](https://docs.scipy.org/doc/numpy/user/numpy-for-matlab-users.html), and another from [DataCamp (pdf)](https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Numpy_Python_Cheat_Sheet.pdf).\n",
     "\n",
     "# Installation\n",
-    "## Anaconda\n",
+    "## Anaconda (Windows, macOS, Ubuntu)\n",
     "In Anaconda it as easy as searching for the packages you want and select them for installation.\n",
     "\n",
     "## macOS and Linux\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "(-13.210734622114826-9.6597984166347j)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,8 +135,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Working with arrays"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,9 +169,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "some_bits = [0 1 1 1 1 0 0 0 1 1]\n",
+      "other_bits = [1 1 1 0 1 1 0 1 1 1]\n",
+      "\n",
+      "[False  True  True False  True False  True False  True  True]\n",
+      "[1 1 1 1 1 1 0 1 1 1]\n",
+      "\n",
+      "[0 1 1 0 1 0 0 0 1 1]\n",
+      "[1 1 1 1 1 1 0 1 1 1]\n",
+      "[1 0 0 1 0 1 0 1 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# np.random has all distributions of interest for us.\n",
+    "# randint(low, high, size=None)   It's not inclusive high, i.e., [low, high)\n",
+    "some_bits = np.random.randint(0, 2, size=10)   # Generate an array with 10 random integeres 0 or 1\n",
+    "other_bits = np.random.randint(0, 2, size=10)  # Generate an array with 10 random integeres 0 or 1\n",
+    "\n",
+    "print('some_bits = {}'.format(some_bits))\n",
+    "print('other_bits = {}'.format(other_bits))\n",
+    "print('')\n",
+    "print(some_bits == other_bits)\n",
+    "print(some_bits | other_bits)\n",
+    "print('')\n",
+    "print(np.bitwise_and(some_bits, other_bits))\n",
+    "print(np.bitwise_or(some_bits, other_bits))\n",
+    "print(np.bitwise_xor(some_bits, other_bits))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -184,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
