--- a/10_numpy_scipy.ipynb
+++ b/10_numpy_scipy.ipynb
@@ -176,15 +176,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "some_bits = [0 1 1 1 1 0 0 0 1 1]\n",
-      "other_bits = [1 1 1 0 1 1 0 1 1 1]\n",
-      "\n",
-      "[False  True  True False  True False  True False  True  True]\n",
-      "[1 1 1 1 1 1 0 1 1 1]\n",
-      "\n",
-      "[0 1 1 0 1 0 0 0 1 1]\n",
-      "[1 1 1 1 1 1 0 1 1 1]\n",
-      "[1 0 0 1 0 1 0 1 0 0]\n"
+      "some_bits = [1 1 0 1 1 1 1 1 0 0]\n",
+      "other_bits = [0 1 1 1 1 0 0 0 1 1]\n"
      ]
     }
    ],
@@ -195,14 +188,108 @@
     "other_bits = np.random.randint(0, 2, size=10)  # Generate an array with 10 random integeres 0 or 1\n",
     "\n",
     "print('some_bits = {}'.format(some_bits))\n",
-    "print('other_bits = {}'.format(other_bits))\n",
-    "print('')\n",
-    "print(some_bits == other_bits)\n",
-    "print(some_bits | other_bits)\n",
-    "print('')\n",
-    "print(np.bitwise_and(some_bits, other_bits))\n",
-    "print(np.bitwise_or(some_bits, other_bits))\n",
-    "print(np.bitwise_xor(some_bits, other_bits))"
+    "print('other_bits = {}'.format(other_bits))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True, False,  True,  True, False, False, False, False,\n",
+       "       False])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_bits == other_bits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_bits | other_bits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 1, 1, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.bitwise_and(some_bits, other_bits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.bitwise_or(some_bits, other_bits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 1, 0, 0, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.bitwise_xor(some_bits, other_bits)"
    ]
   },
   {
@@ -227,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
