10_ shortened the example vector for better overview.

--- a/10_numpy_scipy.ipynb
+++ b/10_numpy_scipy.ipynb
@@ -176,16 +176,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "some_bits = [1 1 0 1 1 1 1 1 0 0]\n",
-      "other_bits = [0 1 1 1 1 0 0 0 1 1]\n"
+      "some_bits = [1 0 0 0 0 1 0 0]\n",
+      "other_bits = [0 0 1 0 0 1 0 1]\n"
      ]
     }
    ],
    "source": [
     "# np.random has all distributions of interest for us.\n",
     "# randint(low, high, size=None)   It's not inclusive high, i.e., [low, high)\n",
-    "some_bits = np.random.randint(0, 2, size=10)   # Generate an array with 10 random integeres 0 or 1\n",
-    "other_bits = np.random.randint(0, 2, size=10)  # Generate an array with 10 random integeres 0 or 1\n",
+    "some_bits = np.random.randint(0, 2, size=8)   # Generate an array with 8 random integeres 0 or 1\n",
+    "other_bits = np.random.randint(0, 2, size=8)  # Generate an array with 8 random integeres 0 or 1\n",
     "\n",
     "print('some_bits = {}'.format(some_bits))\n",
     "print('other_bits = {}'.format(other_bits))"
@@ -199,8 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "array([False,  True, False,  True,  True, False, False, False, False,\n",
-       "       False])"
+       "array([False,  True, False,  True,  True,  True,  True, False])"
       ]
      },
      "execution_count": 8,
@@ -220,7 +219,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "array([1, 0, 1, 0, 0, 1, 0, 1])"
       ]
      },
      "execution_count": 9,
@@ -240,7 +239,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 0, 1, 1, 0, 0, 0, 0, 0])"
+       "array([0, 0, 0, 0, 0, 1, 0, 0])"
       ]
      },
      "execution_count": 10,
@@ -260,7 +259,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "array([1, 0, 1, 0, 0, 1, 0, 1])"
       ]
      },
      "execution_count": 11,
@@ -280,7 +279,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 1, 0, 0, 1, 1, 1, 1, 1])"
+       "array([1, 0, 1, 0, 0, 0, 0, 1])"
       ]
      },
      "execution_count": 12,
@@ -295,6 +294,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "The above arrays must not contain only 0 or 1, it can be any integer. Just as the bitwise operators in notebook 02."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
