99_ added short installation section.

--- a/99_matplotlib.ipynb
+++ b/99_matplotlib.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Matplotlib\n",
+    "\n",
+    "To plot in python, install the `matplotlib` package\n",
+    "## Anaconda\n",
+    "As usual in Anaconda, you can search for matplotlib and install it using the graphical interface.\n",
+    "\n",
+    "## macOS / Ubuntu on Command line\n",
+    "\n",
+    "```sh\n",
+    "pip install matplotlib\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using matplotlib in notebooks\n",
     "To use matplotlib and show plots in a notebook there are different ways; two (2) are shown here.\n",
     "\n",
     "1. __%matplotlib notebook__ will give you an interactive plot, but you MUST remeber to shut it down before plotting the next.\n",
