--- a/20_bpsk.ipynb
+++ b/20_bpsk.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bpsk_modulation(bits):\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    :param bits: Integer representation of the bits to be modulated. For BPSK Integer and Binary are the same.\n",
+    "    :type bits: int\n",
+    "    :return: The complex constellation symbol\n",
+    "    :rtype: complex\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        return bpsk_constellation[bits]\n",
     "    except IndexError:\n",
@@ -76,12 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bpsk_demodulation(received_symbol):\n",
-    "    if real(received_symbol) >= 0:\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    :param received_symbol: The complex symbol to be demodulated.\n",
+    "    :type received_symbol: complex\n",
+    "    :return: The demodulated bits, represented as the corresponding Integer value.\n",
+    "    :rtype: int\n",
+    "    \"\"\"\n",
+    "    if received_symbol.real >= 0:\n",
     "        return 1\n",
     "    else:\n",
     "        return 0"
@@ -96,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +139,7 @@
     "            plt_str = '{0:0{1:d}b}'.format(count, int(code_word_size))\n",
     "        if base == 10:\n",
     "            plt_str = '{0:d}'.format(count)\n",
+    "        # x and y cordinates for the string are the real and imaginary parts of the symbol.\n",
     "        plt.text(symbol.real, symbol.imag, plt_str)\n",
     "        count += 1\n",
     "        \n",
@@ -134,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -932,30 +947,53 @@
    ],
    "source": [
     "%matplotlib notebook\n",
-    "plot_constellation()\n",
-    "\n",
-    "tx_bits = np.random.randint(0, 2, 1024)  # Create a vector with 1024 random bits to modulate\n",
-    "\n",
-    "for bit in tx_bits:\n",
-    "    tx_symbol = bpsk_modulation(bit)\n",
-    "    "
+    "plot_constellation()    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tx_bits = np.random.randint(0, 2, 1024)  # Create a vector with 1024 random bits to modulate\n",
+    "tx_symbols = np.array([bpsk_modulation(bit) for bit in tx_bits])  # Map the bits onto BPSK symbols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rx_bits = np.array([bpsk_demodulation(symbol) for symbol in tx_symbols])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(-1+0j)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(tx_symbol)"
+    "all(rx_bits == tx_bits)  # Are all the received bits the same as the transmitted?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, the above example is not very intresting because the is now channel that corrupts or distorts the data. So, in the above tests just proves that the demodulation works as expected."
    ]
   },
   {
