--- a/20_bpsk.ipynb
+++ b/20_bpsk.ipynb
@@ -993,7 +993,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, the above example is not very intresting because the is now channel that corrupts or distorts the data. So, in the above tests just proves that the demodulation works as expected."
+    "Now, the above example is not very intresting because there is no channel that corrupts or distorts the data. So, in the above tests just proves that the demodulation works as expected."
    ]
   },
   {
@@ -1020,7 +1020,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
